<resources>
    <string name="app_name">Covid</string>


    <!-- Fcm service -->
    <string name="log_fcm_message_id">"FCM Message Id: "</string>
    <string name="log_fcm_notification_message">"FCM Notification Message: "</string>
    <string name="log_fcm_data">"FCM Data: "</string>
    <string name="log_fcm_data_message">"FCM Data Message: "</string>
    <string name="notification_channel_default">Notifications</string>
    <string name="notification_channel_description_default">Latest Updates</string>

    <!-- Network error messages -->
    <string name="error_unexpected_error">Something went wrong.</string>
    <string name="error_bad_connection_try_again">Bad connectivity.</string>
    <string name="error_remote_server_failed">Application server could not respond.</string>
    <string name="error_paring">Parsing error</string>
    <string name="error_internet_not_connected">Please check your internet connection.</string>
    <string name="error_device_rooted">This device is rooted. We are not responsible for any kind of data loss and hack. Use it at your own risk!!</string>
    <string name="error_fb_login_failed">Facebook Login failed!!</string>
    <string name="error_session_expired">Session expired.</string>

    <!-- Error messages -->
    <string name="error_not_a_valid_image_file">File is not a valid image.</string>

    <!-- Image Chooser -->
    <string name="text_cancel">Cancel</string>
    <string name="text_camera">Camera</string>
    <string name="text_setting">Settings</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_multiple">Multiple</string>
    <string name="text_choose_image">Choose Image</string>
    <string name="permission_camera_storage_msg">Permissions are required for camera &amp; storage.</string>
    <string name="permission_camera_storage_denied_msg">Permissions denied. Please grant permission for camera &amp; storage in setting.</string>

    <!-- Dialog -->
    <string name="text_retry">Retry</string>
    <string name="text_exit">Exit</string>
    <string name="text_ok">Ok</string>
    <string name="text_proceed">Proceed</string>
    <string name="text_loading">Loading…</string>
    <string name="text_back">Back</string>
    <string name="text_home_microbiome">Microbiome</string>
    <string name="text_continue">Continue</string>
    <string name="text_home_genetics">Genetics</string>
    <string name="text_home_food_nutrition"><![CDATA[Food & Nutrition]]></string>
    <string name="text_home_fitness">Fitness</string>
    <string name="text_home_counsellor">Counsellor</string>
    <string name="text_home_contact_us">Contact Us</string>
    <string name="text_home_coming_soon">Coming Soon</string>
    <string name="text_schedule_counselling">Schedule Counselling</string>
    <string name="text_select_date">Select Date</string>
    <string name="text_submit">Submit</string>
    <string name="text_schedule_now">Schedule Now</string>
    <string name="text_show_available_slots">SHow Available \nSlots</string>
    <string name="top_contact_us_if_you_need_our_help_have_questions_about_how_to_use_the_platform_or_are_experiencing_technical_difficulties_please_do_not_hesitate_to_contact_us">If you need our help, have questions about how to use the platform or are experiencing technical difficulties, please do not hesitate to contact us.</string>
    <string name="bottom_contact_us_by_submitting_this_form_you_agree_to_our_terms_and_conditions_and_our_privacy_policy_which_explains_how_we_may_collect_use_and_disclose_your_personal_information_including_to_third_parties">By submitting this form you agree to our terms and conditions and our Privacy Policy which explains how we may collect, use and disclose your personal information including to third parties.</string>
    <string name="text_home_food_amp_nnutrition"><![CDATA[Food & \nNutrition]]></string>
    <string name="text_home_reports">MyReport</string>
    <string name="text_home_genomic_counselling">Genomic\nCounselling</string>
    <string name="text_home_my_smart_diet">MySmart\nDiet</string>
    <string name="text_home_my_cool_fitness">MyCool\nFitness</string>


    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="string_result1_consult_doctor">Consult your doctor immediately or call the helpline number- 1075 (toll-free) or 011-23978046 \nFollow doctor’s advice and undergo laboratory tests if suggested by your doctor. \nStrictly follow home isolation and avoid any kind of contact with anyone. \nThe best way to prevent Coronavirus is by following preventive measures. Therefore, please follow precautionary measures (mentioned below) to protect yourself and others.  \nPlease stay alert and educate yourself with the latest updates from WHO</string>
    <string name="based_on_your_coronavirus_risk_scan_bione_team_of_experts_recommends">Based on your Coronavirus risk scan, Bione team of experts recommends:</string>
    <string name="string_result1_buynow_bottom">Your intestines harbour billions of bacteria that have a profound effect on your health including your body’s response to Coronavirus. This gut flora plays a major role in the optimal functioning of your immune system. My Microbiome test can identify microbial imbalance in your gut which can affect your immunity against Coronavirus.</string>
    <string name="my_microbiome_kit">My Microbiome kit</string>
    <string name="covid_19_diagnostic_home_test_kit">COVID-19 Diagnostic home test kit</string>
    <string name="string_result1_bottom2">Revolutionary product which tells you about the presence of COVID-19 within 5-10 mins. It is a self-use diagnostic test for CORONAVIRUS which can be used in the comfort of your home.</string>


    <string name="consult_health_care_provider_navoid_all_contact">Consult health care provider.\n Avoid all contact</string>


    <string name="string_result2_yoga_bottom_text">Follow preventive measures \nThe best way to prevent Coronavirus is by following preventive measures. Therefore, please follow precautionary measures (mentioned below) to protect yourself and others.\nStay home and avoid meeting others or being a part of any gathering. This will prevent the spread of infection.\nPlease stay alert and educate yourself with the latest updates from WHO</string>
    <string name="quarantine_stay_home_and_monitor_your">Stay home and monitor your symptoms</string>
    <string name="string_result2_yoga_kit_bottom">Your DNA may have gene variants which can make you more vulnerable to viruses. This test can detect those variants and find out your susceptibility to Coronavirus.</string>
    <string name="string_result_bottom_link"><![CDATA[For more information related to Bione products & services please visit www.bione.in or email us on marketing@bione.in]]></string>
    <string name="string_result3_bottom_sneeze">According to your answers, you have a high risk of Coronavirus infection. You need to immediately seek medical care and get yourself tested. Call the helpline number- 1075 (toll-free) or 011-23978046 Till you get medical care, strictly stay in home isolation and avoid any contact with anyone. Please follow precautionary measures (mentioned below) to protect yourself and others. Please stay alert and educate yourself with the latest updates from WHO</string>
    <string name="string_please_select_an_option">Please select an option.</string>
    <string name="coronavirus">CORONAVIRUS</string>
    <string name="call_the_emergency_number_avoid_all_contact">Call the emergency number \nAvoid all contact</string>
    <string name="quarantine">Quarantine</string>
    <string name="error_password">Password must be at least 6 characters long.</string>
    <string name="error_email">Please enter valid email.</string>
    <string name="error_name">Please enter your name.</string>
    <string name="result_emergency_call">Call the emergency number. Avoid all contact</string>
    <string name="result_consul_avoid">Consult healthcare provider. Avoid all contact</string>
    <string name="result_avoid_consult">Avoid all contact. Consult the health department</string>
    <string name="result_quarantine">Quarantine</string>
    <string name="result_follow_preventive">Follow preventive measures</string>
    <string name="result_stay_home">Stay home and monitor your symptoms</string>


</resources>
