<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="Result"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_large" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/quarantine_stay_home_and_monitor_your"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_small" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/spacing_normal"
                    android:src="@mipmap/ic_yoga"
                    android:visibility="visible" />


                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/string_result2_yoga_bottom_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_xsmall"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/based_on_your_coronavirus_risk_scan_bione_team_of_experts_recommends"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_small" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:background="@drawable/drawable_home_stroke"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/spacing_normal"
                    android:src="@mipmap/ic_homekit1"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/covid_19_diagnostic_home_test_kit"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvMicroBioMe"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/spacing_normal"
                    android:background="@drawable/drawable_common_button"
                    android:drawableRight="@drawable/ic_continue"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="BUY NOW"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/string_result2_yoga_kit_bottom"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_xsmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_normal"
                android:background="@drawable/drawable_home_stroke"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="@dimen/spacing_normal"
                    android:src="@mipmap/ic_diagnostic"
                    android:visibility="visible" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/covid_19_diagnostic_home_test_kit"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDiagnostic"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="@dimen/spacing_normal"
                    android:background="@drawable/drawable_common_button"
                    android:drawableRight="@drawable/ic_continue"
                    android:gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="BUY NOW"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_large" />

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/spacing_normal"
                    android:text="@string/string_result1_bottom2"
                    android:textAlignment="center"
                    android:textSize="@dimen/font_xsmall" />


            </LinearLayout>
            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:padding="@dimen/spacing_normal"
                android:text="@string/string_result_bottom_link"
                android:textAlignment="center"
                android:textSize="@dimen/font_xsmall" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
